--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-datepicker": "^4.4.0"
   }
 }
