--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "chartist": "0.10.1",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
+    "html5-file-selector": "^2.1.0",
     "jwt-decode": "^3.1.2",
     "node-sass": "4.14.1",
     "react": "17.0.1",
     "react-bootstrap": "1.4.3",
     "react-chartist": "0.14.3",
     "react-dom": "17.0.1",
+    "react-dropzone": "^11.4.2",
+    "react-dropzone-uploader": "^2.11.0",
     "react-notification-alert": "0.0.13",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
@@ -48,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "prop-types": "^15.7.2",
     "react-datepicker": "^4.4.0"
   }
 }
