--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "light-bootstrap-dashboard-react",
   "version": "2.0.0",
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@fortawesome/fontawesome-free": "5.15.2",
+    "@mui/icons-material": "^5.3.1",
+    "@mui/material": "^5.3.1",
+    "@mui/styled-engine-sc": "^5.3.0",
     "axios": "^0.24.0",
     "bootstrap": "4.6.0",
     "chartist": "0.10.1",
+    "dotenv": "^14.2.0",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
     "html5-file-selector": "^2.1.0",
@@ -13,14 +19,18 @@
     "node-sass": "4.14.1",
     "react": "17.0.1",
     "react-bootstrap": "1.4.3",
+    "react-bootstrap-time-picker": "^2.0.1",
     "react-chartist": "0.14.3",
     "react-dom": "17.0.1",
     "react-dropzone": "^11.4.2",
     "react-dropzone-uploader": "^2.11.0",
+    "react-hook-form": "^7.22.5",
     "react-notification-alert": "0.0.13",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.1"
+    "react-scripts": "4.0.1",
+    "react-time-picker": "^4.4.4",
+    "styled-components": "^5.3.3"
   },
   "optionalDependencies": {
     "jquery": "3.5.1",
