--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-append-prepend": "1.0.8",
     "html5-file-selector": "^2.1.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "node-sass": "4.14.1",
     "react": "17.0.1",
     "react-bootstrap": "1.4.3",
